# aoc2024

hs/: LICENSE  aoc2024.cabal
hs/app/: Main.hs
hs/src/: Common.hs  Day1.hs  Day2.hs
hs/test/: Day1Spec.hs
