cabal-version:      3.0
name:               aoc2024
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             fvrrrn
maintainer:         boris.chernystrand@gmail.com
-- copyright:
category:           None
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib, Day1, Common
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1, text, containers
    hs-source-dirs:   src
    default-language: GHC2021

executable aoc2024
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.2.1,
        text,
        aoc2024

    hs-source-dirs:   app
    default-language: GHC2021

test-suite aoc2024-test
    import:           warnings
    default-language: GHC2021
    other-modules:    Day1Spec
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.1, text,
        aoc2024
